[package]
name = "key-val-store"
version = "0.1.0"
authors = ["Karuna Grewal <karunagrewal98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
crc = "1.7"

[lib]
name = "libkvstore"
path = "src/lib.rs"

[[bin]]
name = "kv_mem"
path = "src/main.rs"